--- a/components/headerNav/HeaderNav.module.css
+++ b/components/headerNav/HeaderNav.module.css
@@ -1,28 +1,4 @@
-.nav ul {
+.list {
   display: flex;
   gap: 2.4rem;
-}
-
-.item {
-  border-radius: 20px;
-  padding: 1.2rem;
-  transition: all 0.2s;
-  position: relative;
-}
-
-.item:hover {
-  /* transform: scale(1.05); */
-  background-color: rgba(36, 36, 36, 0.5);
-}
-
-.item a {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-  padding: 0.8rem;
-}
-
-.item img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(295deg)
-    brightness(106%) contrast(102%);
 }
