feat: register/login/profile page

--- a/components/headerNav/ProfileNav.module.css
+++ b/components/headerNav/ProfileNav.module.css
@@ -8,7 +8,7 @@
   visibility: hidden;
   transition: all 0.3s;
   width: 100%;
-  background-color: #212529;
+  background-color: rgb(33, 37, 41);
   border-radius: 20px;
   overflow: hidden;
 }
