--- a/components/auth/auth/Authenticate.module.css
+++ b/components/auth/auth/Authenticate.module.css
@@ -1,3 +1,16 @@
+.link {
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 2.4rem;
+  padding: 1.2rem;
+  transition: all 0.4s ease-out;
+}
+
+.link:hover {
+  color: #f59f00;
+}
+
 .img {
   position: fixed;
   top: 0;
@@ -36,6 +49,7 @@
 .info h1 {
   font-size: 6rem;
   text-align: center;
+  margin-bottom: 4.8rem;
 }
 
 .info span {
