--- a/components/headerNav/ProfileNav.module.css
+++ b/components/headerNav/ProfileNav.module.css
@@ -39,3 +39,20 @@
   /* transform: scale(1.05); */
   background-color: rgba(36, 36, 36, 0.5);
 }
+
+.logout {
+  display: block;
+  padding: 2rem;
+  line-height: 1.3;
+  transition: all 0.3s;
+  background: none;
+  color: #fff;
+  font-size: 2.4rem;
+  text-align: left;
+  border: none;
+  width: 100%;
+}
+
+.logout:hover {
+  background-color: #373b3e;
+}
