--- a/components/movie/MovieBackground.module.css
+++ b/components/movie/MovieBackground.module.css
@@ -13,36 +13,20 @@
   );
 }
 
-@keyframes reveal {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes scale {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
 .img {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -100;
   object-fit: cover;
+  width: 100%;
+  height: 100%;
   /* animation-name: scale; */
   /* animation-duration: 25s; */
   /* animation-iteration-count: infinite; */
+}
+
+.img-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  z-index: -100;
 }
