--- a/components/ui/ProgressBar.module.css
+++ b/components/ui/ProgressBar.module.css
@@ -1,5 +1,6 @@
 .bar {
   position: fixed;
+  z-index: 23438;
   width: 100%;
   height: 3px;
   top: 0;
@@ -24,6 +25,7 @@
   background-color: #444;
   top: 0;
   left: 0;
+  z-index: 2348738;
 
   animation-name: move;
   animation-duration: 1s;
