fix: image component

--- a/components/rates/RateItem.module.css
+++ b/components/rates/RateItem.module.css
@@ -55,9 +55,9 @@
   border-radius: 50%;
 }
 
-.img {
-  width: 100%;
-  height: auto;
+.img-container {
+  height: 33rem;
+  overflow: hidden;
   border-radius: 10px;
 }
 
