--- a/components/moviesGrid/MovieGridItem.module.css
+++ b/components/moviesGrid/MovieGridItem.module.css
@@ -1,8 +1,10 @@
 .item img {
-  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .item {
+  height: 33rem;
   transition: all 0.2s ease-out;
   border-radius: 10px;
   overflow: hidden;
