--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "secular";
-  src: url(../assets/fonts/secular.ttf);
+  src: url(../public/fonts/secular.ttf);
 }
 
 @font-face {
   font-family: "open-sans";
-  src: url(../assets/fonts/opensans.ttf);
+  src: url(../public/fonts/opensans.ttf);
 }
 
 html {
