--- a/components/moviesGrid/MoviesGrid.module.css
+++ b/components/moviesGrid/MoviesGrid.module.css
@@ -12,3 +12,9 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 1.2rem;
 }
+
+@media (max-width: 1000px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
