--- a/components/moviesGrid/MoviesGrid.module.css
+++ b/components/moviesGrid/MoviesGrid.module.css
@@ -1,5 +1,8 @@
 .container {
   margin-top: 6.4rem;
+  max-width: 120rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container h2 {
@@ -13,8 +16,47 @@
   gap: 1.2rem;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
+  .container {
+    max-width: 90rem;
+  }
+
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 929px) {
+  .container {
+    max-width: 70rem;
+  }
+
   .grid {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 728px) {
+  .container {
+    max-width: 60rem;
+  }
+
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 630px) {
+  .container {
+    max-width: 45rem;
+  }
+
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 495px) {
+  .container {
+    max-width: 35rem;
   }
 }
