--- a/components/rates/RateWindow.module.css
+++ b/components/rates/RateWindow.module.css
@@ -64,3 +64,22 @@
 .close:hover {
   transform: scale(1.1);
 }
+
+@media (max-width: 750px) {
+  .close {
+    top: 0;
+    right: 0;
+  }
+
+  .list {
+    gap: 1.2rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 400px) {
+  .list {
+    gap: 1.2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
