--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,12 @@ html {
   font-size: 62.5%;
 }
 
+@media (max-width: 455px) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   line-height: 1;
   font-weight: 400;
